--- a/assets/scss/headers.scss
+++ b/assets/scss/headers.scss
@@ -46,12 +46,15 @@
 }
 
 .hero {
-  padding: 140px 0 80px 0;
+  display: flex;
+  @extend .align-items-center;
+  padding-top: 2rem;
   min-height: 350px;
   font-family: $font-head;
   background: $bg-head;
   color: $color-head;
   background-size: cover;
+  background-attachment: fixed;
 
   .page-title {
     font-family: $font-head;
@@ -90,6 +93,10 @@
       }
     }
   }
+}
+
+.home .hero {
+  min-height: 450px;
 }
 
 /* Simple page title */
