--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,23 +2,23 @@
 @import "bootstrap";
 
 // Progressus Bootstrap theme
-@import "bootstrap-theme";
+@import "bootstrap-theme"; // TODO: get rid
+@import "typography";
 
 // Page-specific styles
 @import "portfolio";
 @import "blog";
 
-@import "layout";
 
-// Footer, Header and other components
+// Layout, Footer, Header, Components
+@import "layout";
 @import "headers";
 @import "footer";
 @import "pricing";
 @import "cta";
 @import "mainnav";
 @import "btns";
-
-@import "typography";
+@import "testimonials";
 
 
 
@@ -118,93 +118,6 @@
     color: $primary;
   }
 }
-
-
-/* Section: Testimonials
-******************************/
-.testimonials {
-  padding-bottom: 40px !important;
-
-  .carousel-indicators {
-    bottom: -60px;
-    z-index: auto;
-
-    li {
-      background: $gray-400;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      + li {
-        margin-left: 7px;
-      }
-
-      &:before,
-      &:after {
-        display: none;
-      }
-
-      &.active {
-        background: $primary;
-        border: none;
-        margin: 1px;
-      }
-
-    }
-  }
-
-  .title {
-    margin-bottom: 60px;
-  }
-  .item {
-    display: none;
-
-    &:first-of-type {
-      display: flex;
-    }
-
-    .profile {
-      img {
-        border-radius: 50%;
-        border: 9px solid rgba(0, 0, 0, .1);
-      }
-    }
-
-    .content {
-    }
-
-    blockquote {
-      font-weight: 300;
-      border-left: 0;
-      padding: 0;
-      position: relative;
-
-      .fa {
-        position: absolute;
-        color: darken($bg-accent, 14%);
-        font-size: 22px;
-        left: -45px;
-      }
-    }
-
-    .source {
-      font-weight: bold;
-    }
-
-    .source .title {
-      font-size: 16px;
-      color: $body-color;
-    }
-
-    @include media-breakpoint-down(sm) {
-      div {
-        text-align: center;
-      }
-    }
-  }
-}
-
-
-
 
 
 /* Section: Sign In
