--- a/assets/scss/blog.scss
+++ b/assets/scss/blog.scss
@@ -1,4 +1,3 @@
-
 .head-inner .entry-meta a {
   color: $color-head;
 }
@@ -20,16 +19,17 @@
 }
 
 .post {
-  margin: 0px 0 55px 0;
-  padding: 0 0 55px 0;
-  border-bottom: 1px solid darken($bg-accent, 5%);
-}
+  & + & {
+    @extend .mt-6;
+    @extend .pt-5;
+    border-top: 1px solid $border-color;
 
-.post:last-child {
-  border-bottom: 0 none;
+    //padding: 0 0 55px 0;
+  }
 }
 
 .entry-title {
+  font-size: $font-size-base * 2.7;
   text-align: center;
   font-weight: 700;
   a {
@@ -44,41 +44,56 @@
 }
 
 .entry-header {
-  .entry-meta {
-    text-align: center;
-    font-size: 16px;
-    color: #a5a5a5;
-    margin: 0 0 15px 0;
-    a {
-      opacity: .8;
+}
+
+.entry-meta,
+.entry-footer {
+  text-align: center;
+  font-size: 16px;
+  color: #a5a5a5;
+  margin: 0 0 15px 0;
+  a {
+    color: $gray-700;
+
+    &:hover {
+      color: $primary;
+      text-decoration: none;
     }
-    a:hover {
-      opacity: .8;
-    }
+  }
+}
+
+.posted-on {
+  .updated {
+    display: none;
+  }
+  .published.updated {
+    display: inline;
   }
 }
 
 .entry-content {
 }
 
-.more-link {
-  color: $color-muted;
-  font-size: 16px;
-  font-weight: bold;
-}
+.post-thumbnail {
+  display: block;
+  margin: 0 0 1rem 0;
 
-.meta-nav {
-  font-weight: bold;
-  color: #666666;
-  text-decoration: none;
-  &:hover {
-    color: #333333;
-    text-decoration: underline;
+  img {
+    max-width: 100%;
   }
 }
 
-.meta-divider {
-  margin: 0 5px;
+.more-link {
+  margin-top: .7rem;
+
+  a {
+    color: $color-muted;
+    font-weight: bold;
+
+    &:hover {
+      color: $primary;
+    }
+  }
 }
 
 /* Comments
