--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,12 +1,9 @@
 @import "constants";
 @import "bootstrap";
 
-// Progressus Bootstrap theme
-@import "bootstrap-theme"; // TODO: get rid
 @import "typography";
 
 // Page-specific styles
-@import "portfolio";
 @import "blog";
 
 
@@ -14,225 +11,6 @@
 @import "layout";
 @import "headers";
 @import "footer";
-@import "pricing";
-@import "cta";
 @import "mainnav";
-@import "btns";
 @import "testimonials";
-
-
-
-// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-// Your site-specific styles
-// Put all your custom styles in that file, and keep this one intact.
-// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-@import "custom";
-
-
-/* social profile icons */
-.social-icons {
-  list-style: none;
-  padding-left: 0;
-  li {
-    display: inline;
-  }
-  a {
-    display: inline-block;
-    margin: 0 5px 5px 0;
-    width: 32px;
-    height: 32px;
-    background: $primary;
-    border: 2px solid $primary;
-    border-radius: 50%;
-    text-align: center;
-  }
-  i {
-    color: white;
-    line-height: 29px;
-  }
-  a:hover, a.active {
-    background: $bg-body;
-    i {
-      color: $primary;
-    }
-  }
-}
-
-/*************************************************************************
-                            Helpers
-**************************************************************************/
-#social {
-  margin-top: 50px;
-  margin-bottom: 50px;
-
-  .wrapper {
-    width: 340px;
-    margin: 0 auto;
-  }
-}
-
-// Toggler (monthly/yearly pricing tab control for example)
-.toggler {
-  li {
-    margin: 0 0 7px 0;
-  }
-  li.active {
-    display: none;
-  }
-}
-
-.inline-toggler {
-  li {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-  }
-  li.active {
-    display: none;
-  }
-}
-
-
-/* Section Team
-*******************************/
-.person-photo,
-.elementor .person-photo{
-  border-radius: 50%;
-  @extend .img-fluid;
-  border: 5px solid darken($bg-accent, 4%);
-}
-
-
-.person-social {
-  display: block;
-  margin-top: 7px;
-  font-size: 14px;
-  color: $gray-400;
-  margin-bottom: 1rem;
-
-  a {
-    color: $gray-400;
-    text-decoration: none;
-  }
-  a:hover {
-    color: $primary;
-  }
-}
-
-
-/* Section: Sign In
-******************************/
-.page-signin {
-  background: $bg-head url(../images/bg_header.jpg) no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  @media (max-width: 480px) {
-    padding-top: 20px;
-  }
-}
-
-.section-signin {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -225px 0 0 -180px;
-  width: 360px;
-  height: 450px;
-  @media (max-width: 480px) {
-    position: inherit;
-    top: inherit;
-    left: inherit;
-    margin: 0;
-    width: 100%;
-    height: auto;
-  }
-}
-
-/* About */
-
-/* Section "features" and similar ones, with icons on the side
-**************************************************************************/
-.info-icons-h {
-  figure {
-    position: relative;
-    .icon {
-      position: absolute;
-      font-size: 24px;
-      top: 0px;
-      left: 30px;
-    }
-    .text {
-      margin: 0 0 0 75px;
-    }
-    .caption {
-      text-transform: uppercase;
-      font-size: 18px;
-      margin: 0 0 15px 0;
-      padding: 0 0 15px 0;
-      font-weight: bold;
-      letter-spacing: 2px;
-      opacity: .75;
-      position: relative;
-    }
-    .caption:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      display: block;
-      border-bottom: 1px dotted $primary;
-      width: 50px;
-    }
-  }
-  figure.text-right {
-    .icon {
-      right: 30px;
-      left: auto;
-    }
-    .text {
-      margin: 0 75px 0 0;
-    }
-    .caption:after {
-      right: 0;
-      left: auto;
-    }
-  }
-
-  @media (max-device-width: 480px) {
-    figure {
-      text-align: center !important;
-      margin-bottom: 30px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-      .icon {
-        position: inherit;
-        top: auto;
-        left: auto;
-        width: 100%;
-        text-align: center;
-      }
-      .text {
-        margin: 0;
-      }
-      .caption {
-        font-size: 16px;
-        text-align: center;
-        margin: 10px 0;
-        padding: 0;
-        position: inherit;
-      }
-      .caption:after {
-        display: none;
-      }
-    }
-    figure.text-right {
-      .icon {
-        right: auto;
-        left: auto;
-      }
-      .text {
-        margin: 0;
-      }
-    }
-  }
-}
+@import "team";
